BPER/DEVF/force-app/main/default/objects/CRM_RaccomandazioniPICO__c/CRM_RaccomandazioniPICO__c.object-meta.xml
<CustomObject>
    <label>Raccomandazione PICO</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome Raccomandazione</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Raccomandazioni PICO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>