BPER/DEVF/force-app/main/default/objects/CRM_RaccomandazioniPICO__c/fields/CRM_RaccPicoData__c.field-meta.xml
<CustomField>
    <fullName>CRM_RaccPicoData__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Raccomandazioni pico - Data</label>
    <type>Date</type>
</CustomField>