BPER/DEVF/force-app/main/default/objects/CRM_RaccomandazioniPICO__c/fields/CRM_RaccPicoMotivo__c.field-meta.xml
<CustomField>
    <fullName>CRM_RaccPicoMotivo__c</fullName>
    <label>Raccomandazioni pico - Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Motivo 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>