BPER/DEVF/force-app/main/default/objects/CRM_RaccomandazioniPICO__c/fields/CRM_RaccPicoNDGpresentatore__c.field-meta.xml
<CustomField>
    <fullName>CRM_RaccPicoNDGpresentatore__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Raccomandazioni pico - NDG presentatore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>