BPER/DEVF/force-app/main/default/objects/CRM_RaccomandazioniPICO__c/fields/CRM_RaccPicoNDGRapporto__c.field-meta.xml
<CustomField>
    <fullName>CRM_RaccPicoNDGRapporto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Raccomandazioni pico - NDG rapporto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>