BPER/DEVF/force-app/main/default/objects/CRM_RaccomandazioniPICO__c/fields/CRM_RaccPicoUnitaOrganiz__c.field-meta.xml
<CustomField>
    <fullName>CRM_RaccPicoUnitaOrganiz__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Raccomandazioni pico - unità organizzati</label>
    <length>255</length>
    <type>Text</type>
</CustomField>