BPER/DEVF/force-app/main/default/objects/CRM_RaccomandazioniPICO__c/fields/NDW_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>NDW_ExternalId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>